# oiramExporter

./: CMakeLists.txt  README.md  oiramExporter.sln
OgreComponent/: CMakeLists.txt  OgreComponent.def  OgreComponent.vcxproj  OgreComponent.vcxproj.filters  OgreRenderSystemComponent.cpp  OgreRenderSystemComponent.h  OgreSerializerComponent.cpp  OgreSerializerComponent.h  dllmain.cpp  stdafx.cpp  stdafx.h
OgreComponent/rc/: OgreComponent.rc  resource.h
dependencies/: crashreport.h  fogatmos.h  mix.h  normalrender.h  rendersystem.h  requisites.h  scene.h  serializer.h  strutil.cpp  strutil.h  strutil_old.cpp  strutil_old.h  type.h
dependencies/FreeImage/: CMakeLists.txt  FreeImage.h
dependencies/FreeImage/LibTIFF4/: tif_config.h
dependencies/OGRE/include/: OgreBuildSettings.h
dependencies/include/IL/: config.h
dependencies/lib/x64/: PVRTexLib.lib  PhysX3Common_x64.lib  PhysX3Cooking_x64.lib  nvtt.lib
dependencies/lib/x86/: PVRTexLib.lib  PhysX3Common_x86.lib  PhysX3Cooking_x86.lib
dependencies/nvidia-texture-tools/: CMakeLists.txt
dependencies/res/: Copy of BatchExport.ms  oiramExporter.rc  resource.h
dependencies/res/ms/: VRay 代理.ms  category.ini  中文VRay AO.ms  修改所有VRayMtl.ms  关闭所有组.ms  刷新场景信息.ms  刷新物体单位.ms  合并同名材质.ms  垂直对齐表面.ms  导入丢失材质.ms  导入同名材质.ms  导入所有材质.ms  导入材质库材质.ms  导入选择材质.ms  打开所有组.ms  按材质ID分离.ms  按材质塌陷.ms  按材质线框色.ms  整理丢失贴图.ms  材质转换.ms  清空材质球(Arch).ms  清空材质球(Std).ms  清空材质球(VR).ms  特殊功能.ms  英文VRay AO.ms  超级分离.ms  转材质通道.ms  选择没有材质的物体.ms  选择空物体.ms  重命名.ms  随机操作.ms
doc/: DotSceneFormat   Ogre Wiki.htm
doc/DotSceneFormat   Ogre Wiki_files/: minified_2e4935b03028477e881b0f264b0d8517.js  minified_45065a3e0d56b8811225576ba7dc1533.css  tiki-jsplugin.php
oiramExporter/: Component.cpp  Component.h  Exporter.cpp  Exporter.h  LogMessageDialog.cpp  LogMessageDialog.h  MaxScriptExtended.cpp  MaxScriptExtended.h  OptionDialog.cpp  OptionDialog.h  ViewExtended.cpp  ViewExtended.h  dllmain.cpp  oiramExporter.def  oiramExporter.vcxproj  oiramExporter.vcxproj.filters  stdafx.cpp  stdafx.h
oiramImpl/: Analyzer.h  AnalyzerGeometry.cpp  AnalyzerMaterial.cpp  AnalyzerSkeleton.cpp  CMakeLists.txt  DotSceneExport.cpp  DotSceneExport.h  Exporter.cpp  Exporter.h  ImageCompressor.cpp  ImageCompressor.h  ImageLoader.cpp  ImageLoader.h  LogManager.cpp  LogManager.h  Optimizer.cpp  Optimizer.h  OptimizerAnimation.cpp  OptimizerGeometry.cpp  OptimizerPhysX.cpp  dllmain.cpp  oiramImpl.cpp  oiramImpl.def  oiramImpl.vcxproj  oiramImpl.vcxproj.filters  stdafx.cpp  stdafx.h
tools/: modify.ms
tools/WallWorm model tools/: install.ms
tools/WallWorm model tools/WallWormModelTools/: Maple3DLayerFns.ms  bodygroups.ms  lodsui.ms  textureExport.ms  wallworm_model_tools.ms  ww_mt_funcs.ms  ww_qc_surfaceproplist.ms  ww_struct_bodygroup.ms  ww_struct_lod.ms  ww_struct_sequence.ms  ww_structs.ms  wwmt_mcr.ms  wwmt_sequenceconfig.ms  wwmt_struct_attachment.ms  wwmtconfigutility.ms
tools/WallWorm model tools/WallWormSimpleDisplacement/: anvil.ms  anvil_funcs.ms  brushmode_mcr.mcr  config.ms  prt.ms  startup.ms  ww_displacements.ms  ww_displacements2.ms  wwdt_event_funcs.ms  wwdt_mcr.mcr  wwdtconfigutility.ms
tools/WallWorm model tools/WallWormSkyWriter/: config.ms  sky_writer.ms  wwsw_mcr.mcr  wwswconfigutility.ms
tools/WallWorm model tools/WallWormUtilities/: AlphaSpec.ms  AlphaSpec_mcr.ms  AutoMaterial.mcr  BoneTools.ms  ConvertPlanesToDisplacements.ms  CreateDisplacementsFromSelection.ms  DisplacementTools.ms  DisplacementsMat2toMat.ms  ExportSMD.ms  GeneratePathEntities.ms  HideLODs.ms  HullHelper.ms  HullHelper_mcr.ms  ImportDetailVBSP.ms  LoadLineFile.ms  PaintDisplacementsOnFaces.ms  ProblemChecker.ms  ProxyTools.ms  RemapMaterials.ms  SMDImporterUI.ms  SetLightProperties.ms  UnifyNormalsAcrossObjects.ms  VMFImporterUI.ms  WalkableXView.ms  WalkableXView_mcr.ms  WormFlex.ms  WormFlex_mcr.ms  WormRES.ms  WormRES_mcr.ms  actionDefaults.ms  addWWtoMaxMenu.ms  checkForUpdate.ms  clearWWMT_mcr.ms  cordontools.ms  entityOutputs.ms  exportSceneAsVMF.ms  exportSelectedWWMT.ms  exportSelectedWWMTVTF.ms  findDisplacementsAtSameLocation.ms  getBrushById.ms  (+23 more)
tools/WallWorm model tools/assets/: anvil_logo.tif  anvil_logo_small.tif  feed_worm.tif
tools/WallWorm model tools/common/: blendrender.ms  bone_funcs.ms  brush_tool_textures.ms  config.ms  exportBrushTex.ms  flexfuncs.ms  itoofuncs.ms  matfuncs1.ms  matfuncs2.ms  matgenfuncs.ms  packing_funcs.ms  settings_struct.ms  sprite_struct.ms  version_funcs.ms  wallworm_vmt_struct.ms  write_pfm.ms  ww_common_funcs.ms  ww_struct_mat.ms  wwmt_material_library_generator.ms  wwmt_particles.ms  xmlparse.ms  xref_funcs.ms
tools/WallWorm model tools/config/: vmfPresets.ms  wwmt.ini
tools/WallWorm model tools/custom_attributes/: bodygroups.ms  displacements.ms  lod.ms  map_cas.ms  material.ms  vmf.ms  wwmt.ms
tools/WallWorm model tools/general_purpose/: nudge_macros.mcr  pivot_functions.ms  scale_fix.ms  splinefuncs.ms  wallworm_material_merge.ms  wallworm_node_array_funcs.ms  wallworm_nudge.ms  wallworm_quick_parent.ms  wallworm_sprites.ms
tools/WallWorm model tools/importers/: Mario_Kart_SMD_Importer.ms  importer_functions.ms
tools/WallWorm model tools/materiallibraries/: wallworm_source_tools.mat
tools/WallWorm model tools/rollouts/: SMDImport.ms  VMFImport.ms  bodygroups.ms  bone_options.ms  brushEntities.ms  brush_id.ms  cordon.ms  displacement_settings.ms  displacements.ms  dxf_import.ms  entity_copy_paste.ms  importuvfix.ms  lightmap.ms  lights.ms  pointEntities.ms  problem_checker.ms  proxy_tools.ms  recover_displacement.ms  remap_materials.ms  smdexport.ms  wallworm_shape_path.ms  wwmt_anvil_utilities.ms  wwmt_utilities.ms
tools/installer/elvishrender/: elvishrender_build_r669_for_max.rar  install.ms  mzp.run  oiram.ms  oiram_startup.ms
tools/installer/oiramExporter/: mzp.run  setup.ms
tools/physX/: PhysX Convex.bat  PhysX Convex.bat - 快捷方式.lnk  PhysX Triangle.bat  PhysX Triangle.bat - 快捷方式.lnk
tools/scripts/: oiramExporter.ms  oiramExporterEx.ms
tools/scripts/oiramExporter/: BatchExport.ms  Export.ms  Merge.ms  (+5 more)
(+42 files in other folders)
