project(FreeImage)

set(FreeImage_SOURCES
	CacheFile.h
	DeprecationManager/Deprecated.cpp
	DeprecationManager/DeprecationMgr.cpp
	DeprecationManager/DeprecationMgr.h
	FreeImage.h
	FreeImage/BitmapAccess.cpp
	FreeImage/CacheFile.cpp
	FreeImage/ColorLookup.cpp
	FreeImage/Conversion.cpp
	FreeImage/Conversion16_555.cpp
	FreeImage/Conversion16_565.cpp
	FreeImage/Conversion24.cpp
	FreeImage/Conversion32.cpp
    FreeImage/ConversionFloat.cpp
    FreeImage/ConversionRGB16.cpp
	FreeImage/Conversion4.cpp
	FreeImage/Conversion8.cpp
	FreeImage/ConversionRGBF.cpp
	FreeImage/ConversionType.cpp
    FreeImage/ConversionUINT16.cpp
	FreeImage/FreeImage.cpp
	FreeImage/FreeImageIO.cpp
	FreeImage/GetType.cpp
	FreeImage/Halftoning.cpp
	FreeImage/J2KHelper.cpp
	FreeImage/MemoryIO.cpp
    FreeImage/MNGHelper.cpp
	FreeImage/MultiPage.cpp
	FreeImage/NNQuantizer.cpp
	FreeImage/PSDParser.cpp
	FreeImage/PSDParser.h
	FreeImage/PixelAccess.cpp
	FreeImage/Plugin.cpp
	FreeImage/PluginBMP.cpp
	FreeImage/PluginCUT.cpp
	FreeImage/PluginDDS.cpp
	FreeImage/PluginEXR.cpp
	FreeImage/PluginG3.cpp
	FreeImage/PluginGIF.cpp
	FreeImage/PluginHDR.cpp
	FreeImage/PluginICO.cpp
	FreeImage/PluginIFF.cpp
	FreeImage/PluginJ2K.cpp
    FreeImage/PluginJNG.cpp
	FreeImage/PluginJP2.cpp
	FreeImage/PluginJPEG.cpp
	FreeImage/PluginKOALA.cpp
	FreeImage/PluginMNG.cpp
	FreeImage/PluginPCD.cpp
	FreeImage/PluginPCX.cpp
	FreeImage/PluginPFM.cpp
	FreeImage/PluginPICT.cpp
	FreeImage/PluginPNG.cpp
	FreeImage/PluginPNM.cpp
	FreeImage/PluginPSD.cpp
	FreeImage/PluginRAS.cpp
	FreeImage/PluginRAW.cpp
	FreeImage/PluginSGI.cpp
	FreeImage/PluginTARGA.cpp
	FreeImage/PluginTIFF.cpp
	FreeImage/PluginWBMP.cpp
	FreeImage/PluginXBM.cpp
	FreeImage/PluginXPM.cpp
	FreeImage/TIFFLogLuv.cpp
	FreeImage/ToneMapping.cpp
	FreeImage/WuQuantizer.cpp
	FreeImage/ZLibInterface.cpp
	FreeImage/tmoColorConvert.cpp
	FreeImage/tmoDrago03.cpp
	FreeImage/tmoFattal02.cpp
	FreeImage/tmoReinhard05.cpp
	FreeImageIO.h
	FreeImageToolkit/BSplineRotate.cpp
	FreeImageToolkit/Background.cpp
	FreeImageToolkit/Channels.cpp
	FreeImageToolkit/ClassicRotate.cpp
	FreeImageToolkit/Colors.cpp
	FreeImageToolkit/CopyPaste.cpp
	FreeImageToolkit/Display.cpp
	FreeImageToolkit/Filters.h
	FreeImageToolkit/Flip.cpp
	FreeImageToolkit/JPEGTransform.cpp
	FreeImageToolkit/MultigridPoissonSolver.cpp
	FreeImageToolkit/Rescale.cpp
	FreeImageToolkit/Resize.cpp
	FreeImageToolkit/Resize.h
	LibJPEG/jaricom.c
	LibJPEG/jcapimin.c
	LibJPEG/jcapistd.c
	LibJPEG/jcarith.c
	LibJPEG/jccoefct.c
	LibJPEG/jccolor.c
	LibJPEG/jcdctmgr.c
	LibJPEG/jchuff.c
	LibJPEG/jcinit.c
	LibJPEG/jcmainct.c
	LibJPEG/jcmarker.c
	LibJPEG/jcmaster.c
	LibJPEG/jcomapi.c
	LibJPEG/jconfig.h
	LibJPEG/jcparam.c
	LibJPEG/jcprepct.c
	LibJPEG/jcsample.c
	LibJPEG/jctrans.c
	LibJPEG/jdapimin.c
	LibJPEG/jdapistd.c
	LibJPEG/jdarith.c
	LibJPEG/jdatadst.c
	LibJPEG/jdatasrc.c
	LibJPEG/jdcoefct.c
	LibJPEG/jdcolor.c
	LibJPEG/jdct.h
	LibJPEG/jddctmgr.c
	LibJPEG/jdhuff.c
	LibJPEG/jdinput.c
	LibJPEG/jdmainct.c
	LibJPEG/jdmarker.c
	LibJPEG/jdmaster.c
	LibJPEG/jdmerge.c
	LibJPEG/jdpostct.c
	LibJPEG/jdsample.c
	LibJPEG/jdtrans.c
	LibJPEG/jerror.c
	LibJPEG/jerror.h
	LibJPEG/jfdctflt.c
	LibJPEG/jfdctfst.c
	LibJPEG/jfdctint.c
	LibJPEG/jidctflt.c
	LibJPEG/jidctfst.c
	LibJPEG/jidctint.c
	LibJPEG/jinclude.h
	LibJPEG/jmemmgr.c
	LibJPEG/jmemnobs.c
	LibJPEG/jmemsys.h
	LibJPEG/jmorecfg.h
	LibJPEG/jpegint.h
	LibJPEG/jpeglib.h
	LibJPEG/jquant1.c
	LibJPEG/jquant2.c
	LibJPEG/jutils.c
	LibJPEG/jversion.h
	LibJPEG/transupp.c
	LibJPEG/transupp.h
	LibOpenJPEG/bio.c
	LibOpenJPEG/bio.h
    LibOpenJPEG/cidx_manager.c
    LibOpenJPEG/cidx_manager.h
	LibOpenJPEG/cio.c
	LibOpenJPEG/cio.h
	LibOpenJPEG/dwt.c
	LibOpenJPEG/dwt.h
	LibOpenJPEG/event.c
	LibOpenJPEG/event.h
	LibOpenJPEG/fix.h
	LibOpenJPEG/image.c
	LibOpenJPEG/image.h
    LibOpenJPEG/indexbox_manager.h
	LibOpenJPEG/int.h
	LibOpenJPEG/j2k.c
	LibOpenJPEG/j2k.h
	LibOpenJPEG/j2k_lib.c
	LibOpenJPEG/j2k_lib.h
	LibOpenJPEG/jp2.c
	LibOpenJPEG/jp2.h
	LibOpenJPEG/jpt.c
	LibOpenJPEG/jpt.h
	LibOpenJPEG/mct.c
	LibOpenJPEG/mct.h
	LibOpenJPEG/mqc.c
	LibOpenJPEG/mqc.h
	LibOpenJPEG/openjpeg.c
	LibOpenJPEG/openjpeg.h
    LibOpenJPEG/opj_config.h
	LibOpenJPEG/opj_includes.h
	LibOpenJPEG/opj_malloc.h
    LibOpenJPEG/phix_manager.c
	LibOpenJPEG/pi.c
	LibOpenJPEG/pi.h
    LibOpenJPEG/ppix_manager.c
	LibOpenJPEG/raw.c
	LibOpenJPEG/raw.h
	LibOpenJPEG/t1.c
	LibOpenJPEG/t1.h
	LibOpenJPEG/t1_luts.h
	LibOpenJPEG/t2.c
	LibOpenJPEG/t2.h
	LibOpenJPEG/tcd.c
	LibOpenJPEG/tcd.h
	LibOpenJPEG/tgt.c
	LibOpenJPEG/tgt.h
    LibOpenJPEG/thix_manager.c
    LibOpenJPEG/tpix_manager.c
	LibPNG/png.c
	LibPNG/png.h
	LibPNG/pngconf.h
    LibPNG/pngdebug.h
	LibPNG/pngerror.c
	LibPNG/pnggccrd.c
	LibPNG/pngget.c
    LibPNG/pnginfo.h
    LibPNG/pnglibconf.h
	LibPNG/pngmem.c
	LibPNG/pngpread.c
	LibPNG/pngread.c
    LibPNG/pngpriv.h
	LibPNG/pngrio.c
	LibPNG/pngrtran.c
	LibPNG/pngrutil.c
	LibPNG/pngset.c
    LibPNG/pngstruct.h
	LibPNG/pngtrans.c
	LibPNG/pngvcrd.c
	LibPNG/pngwio.c
	LibPNG/pngwrite.c
	LibPNG/pngwtran.c
	LibPNG/pngwutil.c
	LibRawLite/internal/dcraw_common.cpp
	LibRawLite/internal/dcraw_fileio.cpp
	LibRawLite/internal/defines.h
    LibRawLite/internal/demosaic_packs.cpp
    LibRawLite/internal/libraw_bytebuffer.h
	LibRawLite/internal/libraw_internal_funcs.h
	LibRawLite/internal/var_defines.h
	LibRawLite/libraw/libraw.h
	LibRawLite/libraw/libraw_alloc.h
	LibRawLite/libraw/libraw_const.h
	LibRawLite/libraw/libraw_datastream.h
	LibRawLite/libraw/libraw_internal.h
	LibRawLite/libraw/libraw_types.h
	LibRawLite/libraw/libraw_version.h
	LibRawLite/src/libraw_c_api.cpp
	LibRawLite/src/libraw_cxx.cpp
    LibRawLite/src/libraw_datastream.cpp
	LibTIFF4/t4.h
	LibTIFF4/tif_aux.c
	LibTIFF4/tif_close.c
	LibTIFF4/tif_codec.c
	LibTIFF4/tif_color.c
	LibTIFF4/tif_compress.c
	LibTIFF4/tif_config.h
	LibTIFF4/tif_dir.c
	LibTIFF4/tif_dir.h
	LibTIFF4/tif_dirinfo.c
	LibTIFF4/tif_dirread.c
	LibTIFF4/tif_dirwrite.c
	LibTIFF4/tif_dumpmode.c
	LibTIFF4/tif_error.c
	LibTIFF4/tif_extension.c
	LibTIFF4/tif_fax3.c
	LibTIFF4/tif_fax3.h
	LibTIFF4/tif_fax3sm.c
	LibTIFF4/tif_flush.c
	LibTIFF4/tif_getimage.c
	LibTIFF4/tif_jpeg.c
    LibTIFF4/tif_jpeg_12.c
	LibTIFF4/tif_luv.c
    LibTIFF4/tif_lzma.c
	LibTIFF4/tif_lzw.c
	LibTIFF4/tif_next.c
	LibTIFF4/tif_ojpeg.c
	LibTIFF4/tif_open.c
	LibTIFF4/tif_packbits.c
	LibTIFF4/tif_pixarlog.c
	LibTIFF4/tif_predict.c
	LibTIFF4/tif_predict.h
	LibTIFF4/tif_print.c
	LibTIFF4/tif_read.c
	LibTIFF4/tif_strip.c
	LibTIFF4/tif_swab.c
	LibTIFF4/tif_thunder.c
	LibTIFF4/tif_tile.c
	LibTIFF4/tif_version.c
	LibTIFF4/tif_warning.c
	LibTIFF4/tif_write.c
	LibTIFF4/tif_zip.c
	LibTIFF4/tiff.h
	LibTIFF4/tiffio.h
	LibTIFF4/tiffiop.h
	LibTIFF4/tiffvers.h
	LibTIFF4/uvcode.h
	Metadata/Exif.cpp
	Metadata/FIRational.cpp
	Metadata/FIRational.h
	Metadata/FreeImageTag.cpp
	Metadata/FreeImageTag.h
	Metadata/IPTC.cpp
	Metadata/TagConversion.cpp
	Metadata/TagLib.cpp
	Metadata/XTIFF.cpp
	OpenEXR/Half/eLut.h
	OpenEXR/Half/half.cpp
	OpenEXR/Half/half.h
	OpenEXR/Half/halfFunction.h
	OpenEXR/Half/halfLimits.h
	OpenEXR/Half/toFloat.h
	OpenEXR/Iex/Iex.h
	OpenEXR/Iex/IexBaseExc.cpp
	OpenEXR/Iex/IexBaseExc.h
	OpenEXR/Iex/IexErrnoExc.h
	OpenEXR/Iex/IexMacros.h
	OpenEXR/Iex/IexMathExc.h
	OpenEXR/Iex/IexThrowErrnoExc.cpp
	OpenEXR/Iex/IexThrowErrnoExc.h
	OpenEXR/IlmBaseConfig.h
    OpenEXR/IlmImf/b44ExpLogTable.h
    OpenEXR/IlmImf/ImfAcesFile.cpp
    OpenEXR/IlmImf/ImfAcesFile.h
	OpenEXR/IlmImf/ImfArray.h
	OpenEXR/IlmImf/ImfAttribute.cpp
	OpenEXR/IlmImf/ImfAttribute.h
	OpenEXR/IlmImf/ImfAutoArray.h
	OpenEXR/IlmImf/ImfB44Compressor.cpp
	OpenEXR/IlmImf/ImfB44Compressor.h
	OpenEXR/IlmImf/ImfBoxAttribute.cpp
	OpenEXR/IlmImf/ImfBoxAttribute.h
	OpenEXR/IlmImf/ImfCRgbaFile.cpp
	OpenEXR/IlmImf/ImfCRgbaFile.h
	OpenEXR/IlmImf/ImfChannelList.cpp
	OpenEXR/IlmImf/ImfChannelList.h
	OpenEXR/IlmImf/ImfChannelListAttribute.cpp
	OpenEXR/IlmImf/ImfChannelListAttribute.h
	OpenEXR/IlmImf/ImfChromaticities.cpp
	OpenEXR/IlmImf/ImfChromaticities.h
	OpenEXR/IlmImf/ImfChromaticitiesAttribute.cpp
	OpenEXR/IlmImf/ImfChromaticitiesAttribute.h
	OpenEXR/IlmImf/ImfCompression.h
	OpenEXR/IlmImf/ImfCompressionAttribute.cpp
	OpenEXR/IlmImf/ImfCompressionAttribute.h
	OpenEXR/IlmImf/ImfCompressor.cpp
	OpenEXR/IlmImf/ImfCompressor.h
	OpenEXR/IlmImf/ImfConvert.cpp
	OpenEXR/IlmImf/ImfConvert.h
	OpenEXR/IlmImf/ImfDoubleAttribute.cpp
	OpenEXR/IlmImf/ImfDoubleAttribute.h
	OpenEXR/IlmImf/ImfEnvmap.cpp
	OpenEXR/IlmImf/ImfEnvmap.h
	OpenEXR/IlmImf/ImfEnvmapAttribute.cpp
	OpenEXR/IlmImf/ImfEnvmapAttribute.h
	OpenEXR/IlmImf/ImfFloatAttribute.cpp
	OpenEXR/IlmImf/ImfFloatAttribute.h
	OpenEXR/IlmImf/ImfFrameBuffer.cpp
	OpenEXR/IlmImf/ImfFrameBuffer.h
	OpenEXR/IlmImf/ImfFramesPerSecond.cpp
	OpenEXR/IlmImf/ImfFramesPerSecond.h
	OpenEXR/IlmImf/ImfHeader.cpp
	OpenEXR/IlmImf/ImfHeader.h
	OpenEXR/IlmImf/ImfHuf.cpp
	OpenEXR/IlmImf/ImfHuf.h
	OpenEXR/IlmImf/ImfIO.cpp
	OpenEXR/IlmImf/ImfIO.h
	OpenEXR/IlmImf/ImfInputFile.cpp
	OpenEXR/IlmImf/ImfInputFile.h
	OpenEXR/IlmImf/ImfInt64.h
	OpenEXR/IlmImf/ImfIntAttribute.cpp
	OpenEXR/IlmImf/ImfIntAttribute.h
	OpenEXR/IlmImf/ImfKeyCode.cpp
	OpenEXR/IlmImf/ImfKeyCode.h
	OpenEXR/IlmImf/ImfKeyCodeAttribute.cpp
	OpenEXR/IlmImf/ImfKeyCodeAttribute.h
	OpenEXR/IlmImf/ImfLineOrder.h
	OpenEXR/IlmImf/ImfLineOrderAttribute.cpp
	OpenEXR/IlmImf/ImfLineOrderAttribute.h
	OpenEXR/IlmImf/ImfLut.cpp
	OpenEXR/IlmImf/ImfLut.h
	OpenEXR/IlmImf/ImfMatrixAttribute.cpp
	OpenEXR/IlmImf/ImfMatrixAttribute.h
	OpenEXR/IlmImf/ImfMisc.cpp
	OpenEXR/IlmImf/ImfMisc.h
    OpenEXR/IlmImf/ImfMultiView.cpp
    OpenEXR/IlmImf/ImfMultiView.h
	OpenEXR/IlmImf/ImfName.h
	OpenEXR/IlmImf/ImfOpaqueAttribute.cpp
	OpenEXR/IlmImf/ImfOpaqueAttribute.h
	OpenEXR/IlmImf/ImfOutputFile.cpp
	OpenEXR/IlmImf/ImfOutputFile.h
	OpenEXR/IlmImf/ImfPixelType.h
	OpenEXR/IlmImf/ImfPizCompressor.cpp
	OpenEXR/IlmImf/ImfPizCompressor.h
	OpenEXR/IlmImf/ImfPreviewImage.cpp
	OpenEXR/IlmImf/ImfPreviewImage.h
	OpenEXR/IlmImf/ImfPreviewImageAttribute.cpp
	OpenEXR/IlmImf/ImfPreviewImageAttribute.h
	OpenEXR/IlmImf/ImfPxr24Compressor.cpp
	OpenEXR/IlmImf/ImfPxr24Compressor.h
	OpenEXR/IlmImf/ImfRational.cpp
	OpenEXR/IlmImf/ImfRational.h
	OpenEXR/IlmImf/ImfRationalAttribute.cpp
	OpenEXR/IlmImf/ImfRationalAttribute.h
	OpenEXR/IlmImf/ImfRgba.h
	OpenEXR/IlmImf/ImfRgbaFile.cpp
	OpenEXR/IlmImf/ImfRgbaFile.h
	OpenEXR/IlmImf/ImfRgbaYca.cpp
	OpenEXR/IlmImf/ImfRgbaYca.h
	OpenEXR/IlmImf/ImfRleCompressor.cpp
	OpenEXR/IlmImf/ImfRleCompressor.h
	OpenEXR/IlmImf/ImfScanLineInputFile.cpp
	OpenEXR/IlmImf/ImfScanLineInputFile.h
	OpenEXR/IlmImf/ImfStandardAttributes.cpp
	OpenEXR/IlmImf/ImfStandardAttributes.h
	OpenEXR/IlmImf/ImfStdIO.cpp
	OpenEXR/IlmImf/ImfStdIO.h
	OpenEXR/IlmImf/ImfStringAttribute.cpp
	OpenEXR/IlmImf/ImfStringAttribute.h
    OpenEXR/IlmImf/ImfStringVectorAttribute.cpp
    OpenEXR/IlmImf/ImfStringVectorAttribute.h
	OpenEXR/IlmImf/ImfTestFile.cpp
	OpenEXR/IlmImf/ImfTestFile.h
	OpenEXR/IlmImf/ImfThreading.cpp
	OpenEXR/IlmImf/ImfThreading.h
	OpenEXR/IlmImf/ImfTileDescription.h
	OpenEXR/IlmImf/ImfTileDescriptionAttribute.cpp
	OpenEXR/IlmImf/ImfTileDescriptionAttribute.h
	OpenEXR/IlmImf/ImfTileOffsets.cpp
	OpenEXR/IlmImf/ImfTileOffsets.h
	OpenEXR/IlmImf/ImfTiledInputFile.cpp
	OpenEXR/IlmImf/ImfTiledInputFile.h
	OpenEXR/IlmImf/ImfTiledMisc.cpp
	OpenEXR/IlmImf/ImfTiledMisc.h
	OpenEXR/IlmImf/ImfTiledOutputFile.cpp
	OpenEXR/IlmImf/ImfTiledOutputFile.h
	OpenEXR/IlmImf/ImfTiledRgbaFile.cpp
	OpenEXR/IlmImf/ImfTiledRgbaFile.h
	OpenEXR/IlmImf/ImfTimeCode.cpp
	OpenEXR/IlmImf/ImfTimeCode.h
	OpenEXR/IlmImf/ImfTimeCodeAttribute.cpp
	OpenEXR/IlmImf/ImfTimeCodeAttribute.h
	OpenEXR/IlmImf/ImfVecAttribute.cpp
	OpenEXR/IlmImf/ImfVecAttribute.h
	OpenEXR/IlmImf/ImfVersion.cpp
	OpenEXR/IlmImf/ImfVersion.h
	OpenEXR/IlmImf/ImfWav.cpp
	OpenEXR/IlmImf/ImfWav.h
	OpenEXR/IlmImf/ImfXdr.h
	OpenEXR/IlmImf/ImfZipCompressor.cpp
	OpenEXR/IlmImf/ImfZipCompressor.h
	OpenEXR/IlmThread/IlmThread.cpp
	OpenEXR/IlmThread/IlmThread.h
	OpenEXR/IlmThread/IlmThreadMutex.cpp
	OpenEXR/IlmThread/IlmThreadMutex.h
	OpenEXR/IlmThread/IlmThreadPool.cpp
	OpenEXR/IlmThread/IlmThreadPool.h
	OpenEXR/IlmThread/IlmThreadSemaphore.cpp
	OpenEXR/IlmThread/IlmThreadSemaphore.h
	OpenEXR/Imath/ImathBox.cpp
	OpenEXR/Imath/ImathBox.h
	OpenEXR/Imath/ImathBoxAlgo.h
	OpenEXR/Imath/ImathColor.h
	OpenEXR/Imath/ImathColorAlgo.cpp
	OpenEXR/Imath/ImathColorAlgo.h
	OpenEXR/Imath/ImathEuler.h
	OpenEXR/Imath/ImathExc.h
	OpenEXR/Imath/ImathFrame.h
	OpenEXR/Imath/ImathFrustum.h
	OpenEXR/Imath/ImathFun.cpp
	OpenEXR/Imath/ImathFun.h
	OpenEXR/Imath/ImathGL.h
	OpenEXR/Imath/ImathGLU.h
	OpenEXR/Imath/ImathHalfLimits.h
	OpenEXR/Imath/ImathInt64.h
	OpenEXR/Imath/ImathInterval.h
	OpenEXR/Imath/ImathLimits.h
	OpenEXR/Imath/ImathLine.h
	OpenEXR/Imath/ImathLineAlgo.h
	OpenEXR/Imath/ImathMath.h
	OpenEXR/Imath/ImathMatrix.h
	OpenEXR/Imath/ImathMatrixAlgo.cpp
	OpenEXR/Imath/ImathMatrixAlgo.h
	OpenEXR/Imath/ImathPlane.h
	OpenEXR/Imath/ImathPlatform.h
	OpenEXR/Imath/ImathQuat.h
	OpenEXR/Imath/ImathRandom.cpp
	OpenEXR/Imath/ImathRandom.h
	OpenEXR/Imath/ImathRoots.h
	OpenEXR/Imath/ImathShear.cpp
	OpenEXR/Imath/ImathShear.h
	OpenEXR/Imath/ImathSphere.h
	OpenEXR/Imath/ImathVec.cpp
	OpenEXR/Imath/ImathVec.h
	OpenEXR/Imath/ImathVecAlgo.h
	OpenEXR/OpenEXRConfig.h
	Plugin.h
	Quantizers.h
	ToneMapping.h
	Utilities.h
	ZLib/adler32.c
	ZLib/compress.c
	ZLib/crc32.c
	ZLib/crc32.h
	ZLib/deflate.c
	ZLib/deflate.h
    ZLib/gzclose.c
    ZLib/gzguts.h
    ZLib/gzlib.c
    ZLib/gzread.c
    ZLib/gzwrite.c
	ZLib/infback.c
	ZLib/inffast.c
	ZLib/inffast.h
	ZLib/inffixed.h
	ZLib/inflate.c
	ZLib/inflate.h
	ZLib/inftrees.c
	ZLib/inftrees.h
	ZLib/trees.c
	ZLib/trees.h
	ZLib/uncompr.c
	ZLib/zconf.h
	ZLib/zlib.h
	ZLib/zutil.c
	ZLib/zutil.h
)

# need include directories for FreeImage and all the sub libs
include_directories(.)
include_directories(FreeImageToolkit)
include_directories(LibJPEG)
include_directories(LibMNG)
include_directories(LibOpenJPEG)
include_directories(LibPNG)
include_directories(LibRawLite)
include_directories(LibTIFF)
include_directories(OpenEXR)
include_directories(OpenEXR/Half)
include_directories(OpenEXR/Iex)
include_directories(OpenEXR/IlmImf)
include_directories(OpenEXR/IlmThread)
include_directories(OpenEXR/Imath)
include_directories(ZLib)

add_definitions(-DOPJ_STATIC -DLIBRAW_NODLL -DLIBRAW_LIBRARY_BUILD -DFREEIMAGE_LIB -DNO_LCMS)
add_library(FreeImage STATIC ${FreeImage_SOURCES})